--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
 @import "tailwindcss";
 @plugin "daisyui";
